User guide, Developer guide updates and bugfixes (#191)
* partial udpate of EditCommandParserTest

* Add more test cases to EditCommandParser

* complete EditCommandParserTest

* fix test case issues

* fix checkstyle issues

* rename variables and begin Interviewee test cases

* fix checkstyle issues

* Add test cases for Interviewee and Interviewer

* Add test cases for JsonAdaptedDepartment and JsonAdaptedSlot

* update message constraint descriptions for Department, Slot, YearOfStudy and Faculty

* update descriptions for Commands

* update description for commands

* initial changes to UserGuide.adoc

* Update UserGuide.adoc

* fix travis CI issues

* fix travis CI issues

* fix travis CI issues

* fix test case issues

* initial content added to PPP

* fix bug where incorrect dates like 29/02/2019 were being parsed correctly

* rewrite incorrect statements on UserGuide.adoc

* rewrote parse error messages to be more descriptive

* add constraint for tags in add/edit commands in userguide

* update user guide to be more descriptive for add/edit commands

* improve system messages

* update error messages to be more descriptie

* fix travis CI issues

* bugfix where duplicate slots could be added at once

* Add new test cases for bugfix

* fixed a bug where duplicate arguments could be passed in add/edit

* abstract DeleteCommand to DeleteIntervieweeCommand, DeleteInterviewerCommand

* improve test cases

* Added class diagram for Logic component

* add general logic sequence diagram

* add activity diagrams for add, edit and delte

* add sequence diagram for add command

* add sequence diagram for edit command

* add sequence diagram for delete command

* minor renaming

* minor changes

* minor changes

* update developer guide for add command

* complete developer guide

* complete developer guide

* fix travis CI issues

* add clear command to user guide

* complete P

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -14,7 +14,7 @@ ifdef::env-github[]
 :note-caption: :information_source:
 :warning-caption: :warning_sign:
 endif::[]
-:repoURL: https://github.com/se-edu/addressbook-level3
+:repoURL: https://github.com/AY1920S1-CS2103-F09-1/main
 
 By: `Team AY1920S1-CS2103-F09-1`      Since: `Oct 2019`      Licence: `MIT`
 
@@ -52,7 +52,7 @@ To add an interviewee, use the `add` command. Here we add an interviewee with th
 . *Work email* (should be an NUS email) - john_doe@u.nus.edu
 . *Preferred time slots* - 17/10/2019, 1pm to 2pm
 
- add r/interviewee n/John Doe p/91234567 f/School of Computing y/2019 ep/john_doe@gmail.com ew/john_doe@u.nus.edu d/Marketing s/17/10/2019 13:00-14:00
+ add interviewee n/John Doe p/91234567 f/School of Computing y/1 ep/john_doe@gmail.com ew/john_doe@u.nus.edu d/Marketing s/17/10/2019 13:00-14:00
 
 * Note that all fields specified above are *compulsory* when adding an interviewee manually.
 * Please also note that the added interviewee cannot be already present in the application data, ie. no duplicates are allowed.
@@ -65,7 +65,7 @@ Similarly, to add an interviewer with the characteristics:
 . *Department* - Marketing
 . *Available time slots* - 17/10/2019, 1pm to 2pm
 
- add r/interviewer n/Bohn Coe p/97654321 ew/bohn_coe@u.nus.edu d/Marketing s/17/10/2019 13:00-14:00
+ add interviewer n/Bohn Coe p/97654321 ew/bohn_coe@u.nus.edu d/Marketing s/17/10/2019 13:00-14:00
 
 * Again, the fields specified above are *compulsory when adding an interviewer manually.
 * Please also note that the added interviewer cannot be already present in the application data, ie. no duplicates are allowed.
@@ -165,9 +165,9 @@ IMPORTANT: The indicated timeslots, in adding or importing interviewers/intervie
 * Items in square brackets `[]` are optional.
 * Items with `...` after them can be used multiple times, including zero times.
 * *Parameters* can be in any order. E.g if a command specifies `n/NAME p/PHONE`, passing the input as `p/PHONE n/NAME` is also acceptable.
-* Example: `add r/interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL d/DEPARTMENT... s/SLOT... [t/TAG]...`
-** `NAME`, `PHONE`. `FACULTY`, `YEAR_OF_STUDY`, `PERSONAL_EMAIL`, `NUS_WORK_EMAIL`, `DEPARTMENT`, `SLOT` and `TAG` are to be supplied by the user.
-*** Valid input: `add r/interviewee n/John Doe p/88888888 f/School of Computing y/2019 ep/john_doe@gmail.com ew/john_doe@u.nus.edu d/Marketing s/17/10/2019 13:00-14:00 t/friends`
+* Example: `add interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL d/DEPARTMENT... s/SLOT... [t/TAG]...`
+** `NAME`, `PHONE`, `FACULTY`, `YEAR_OF_STUDY`, `PERSONAL_EMAIL`, `NUS_WORK_EMAIL`, `DEPARTMENT`, `SLOT` and `TAG` are to be supplied by the user.
+*** Valid input: `add interviewee n/John Doe p/88888888 f/School of Computing y/1 ep/john_doe@gmail.com ew/john_doe@u.nus.edu d/Marketing s/17/10/2019 13:00-14:00 t/friends`
 *** `t/friends` is optional, and can be omitted from the command.
 *** Multiple tags can be supplied as input in place of just `t/friends`: `t/friends t/strong t/likesDogs`
 
@@ -195,7 +195,7 @@ Constraints:
 
 * Data in .csv file must follow the settings defined in the user preference file. View <<User Preferences, User Preferences>> if you wish to change the
 default settings.
-* Data to be imported should only be in english and should strictly follow the format of the templates given above, e.g. format of headers and timeslots.
+* Data to be imported should only be in English and should strictly follow the format of the templates given above, e.g. format of headers and timeslots.
 
 ==== Importing interviewers’ availability
 Imports interviewers’ availability from a comma separated values (CSV) file. After import command is ran, the GUI should display the imported data.
@@ -377,7 +377,7 @@ Format: `email ct/status`
 // tag::add_interviewee[]
 
 === Add interviewees/interviewers manually `add`
-Manually add a new entity to the database. The command format differs on the `r/ROLE` prefix supplied:
+Manually add a new entity to the database. The command format differs on the preamble supplied, which should be `interviewee` or `interviewer`:
 
 * If `interviewee` is supplied, refer to <<Adding a new interviewee, Adding a new interviewee>> below.
 * If `interviewer` is supplied, refer to <<Adding a new interviewer, Adding a new interviewer>> below.
@@ -385,11 +385,17 @@ Manually add a new entity to the database. The command format differs on the `r/
 ==== Adding a new interviewee
 Manually add a new interviewee to the database.
 
-Format: `add r/interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL d/DEPARTMENT... s/SLOT... [t/TAG]...`
+Format: `add interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL d/DEPARTMENT... s/SLOT... [t/TAG]...`
 
 Example:
 
- add r/interviewee n/John Doe p/88888888 t/CAP5 t/dogLover f/School of Computing ep/JohnDoe@gmail.com ew/JohnDoe@u.nus.edu y/2018 d/Marketing s/20/09/2019 18:00-18:30
+ add interviewee n/John Doe p/91234567 f/School of Computing y/1 ep/john_doe@gmail.com ew/john_doe@u.nus.edu d/Marketing s/17/10/2019 13:30-14:00 t/friends
+
+
+Notes:
+
+* If a name prefix `n/` is supplied, the `NAME` given should not match (case-insensitive) that of other interviewees already in Scheduler.
+** `John Doit` and `John Do it` are considered different names.
 
 // end::add_interviewee[]
 
@@ -400,22 +406,23 @@ Constraints:
 
 * A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
 * A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
-* A `f/FACULTY` can take any value in english, but should not be blank.
-* A `y/YEAR_OF_STUDY` must be a positive integer.
+* A `f/FACULTY` can take any value in English, but should not be blank.
+* A `y/YEAR_OF_STUDY` must be a positive integer within the range [1,5].
 * A `ep/PERSONAL_EMAIL` or `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
 ** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
 ** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `d/DEPARTMENT` should be in English, and should not be blank.
 * A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
 * `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
 and the rightmost *HH:mm* refers to the *end duration*.
 * The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+* The *start duration* and *end duration* of a `s/SLOT` must follow these constraints:
+** A *start duration* and *end duration* must be in 24-hour format.
+** The range of *start durations* and *end durations* available for input must be within <<Working Hours, Working Hours>>.
+** The *start duration* must be earlier than the *end duration*, and be in increments of `duration`.
+The time elapsed from the *start duration* to *end duration* must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. Otherwise, scheduled data will not be displayed
+properly in the user interface. See <<Duration of Timeslot, Duration of Timeslot>> for more details.
 
 ====
 
@@ -426,11 +433,16 @@ by the value of `duration` in <<User Preferences, User Preferences>>. See <<Dura
 ==== Adding a new interviewer
 Manually add a new interviewer to the database.
 
-Format: `add r/interviewer n/NAME p/PHONE ew/NUS_WORK_EMAIL d/DEPARTMENT  s/SLOT... [t/TAG]...`
+Format: `add interviewer n/NAME p/PHONE ew/NUS_WORK_EMAIL d/DEPARTMENT  s/SLOT... [t/TAG]...`
 
 Example:
 
- add r/interviewer n/Mary Jane p/98765432 ew/mary_jane@u.nus.edu d/Marketing s/20/09/2019 18:00-18:30
+ add interviewer n/Mary Jane p/98765432 ew/mary_jane@u.nus.edu d/Marketing s/20/09/2019 18:00-18:30
+
+Notes:
+
+* If a name prefix `n/` is supplied, the `NAME` given should not match (case-insensitive) that of other interviewers already in Scheduler.
+** `John Doit` and `John Do it` are considered different names.
 
 // end::add_interviewer[]
 
@@ -442,17 +454,18 @@ Constraints:
 * A `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
 ** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
 ** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `d/DEPARTMENT` should be in English, and should not be blank.
 * A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
 * `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
 and the rightmost *HH:mm* refers to the *end duration*.
 * The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+* The *start duration* and *end duration* of a `s/SLOT` must follow these constraints:
+** A *start duration* and *end duration* must be in 24-hour format.
+** The range of *start durations* and *end durations* available for input must be within <<Working Hours, Working Hours>>.
+** The *start duration* must be earlier than the *end duration*, and be in increments of `duration`.
+The time elapsed from the *start duration* to *end duration* must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. Otherwise, scheduled data will not be displayed
+properly in the user interface. See <<Duration of Timeslot, Duration of Timeslot>> for more details.
 
 ====
 
@@ -467,7 +480,7 @@ Manually edit an entity in the database. The command format depends on the `r/RO
 ==== Edit an existing interviewee
 Manually edit an existing interviewee in the database.
 
-Format: `edit NAME r/interviewee [p/PHONE] [f/FACULTY] [y/YEAR_OF_STUDY] [ep/PERSONAL_EMAIL] [ew/NUS_WORK_EMAIL]
+Format: `edit NAME r/interviewee [n/NAME] [p/PHONE] [f/FACULTY] [y/YEAR_OF_STUDY] [ep/PERSONAL_EMAIL] [ew/NUS_WORK_EMAIL]
 [d/DEPARTMENT]... [s/SLOT]... [t/TAG]...`
 
 Notes:
@@ -475,10 +488,12 @@ Notes:
 * An empty tag prefix `t/` can be supplied to reset the tags of an interviewee.
 * If a department prefix `d/` is supplied, at least one valid, non-empty department must be provided.
 * If a slot prefix `s/` is supplied, at least one valid, non-empty slot must be provided.
+* If a name prefix `n/` is supplied, the `NAME` given should not match (case-insensitive) that of other interviewees.
+** `John Doit` and `John Do it` are considered different names.
 
 Example:
 
- edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:00-19:00
+ edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:30-19:00
 
 // end::edit_interviewee[]
 
@@ -491,22 +506,23 @@ Constraints:
 
 * A `n/NAME` must only contain alphanumeric characters and spaces, and should not be blank.
 * A `p/PHONE` must only contain numbers, and should be at least 3 digits long.
-* A `f/FACULTY` can take any value in english, but should not be blank.
-* A `y/YEAR_OF_STUDY` must be a positive integer.
+* A `f/FACULTY` can take any value in English, but should not be blank.
+* A `y/YEAR_OF_STUDY` must be a positive integer within the range [1,5].
 * A `ep/PERSONAL_EMAIL` or `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
 ** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
 ** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `d/DEPARTMENT` should be in English, and should not be blank.
 * A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
 * `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
 and the rightmost *HH:mm* refers to the *end duration*.
 * The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+* The *start duration* and *end duration* of a `s/SLOT` must follow these constraints:
+** A *start duration* and *end duration* must be in 24-hour format.
+** The range of *start durations* and *end durations* available for input must be within <<Working Hours, Working Hours>>.
+** The *start duration* must be earlier than the *end duration*, and be in increments of `duration`.
+The time elapsed from the *start duration* to *end duration* must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. Otherwise, scheduled data will not be displayed
+properly in the user interface. See <<Duration of Timeslot, Duration of Timeslot>> for more details.
 
 ====
 
@@ -515,16 +531,18 @@ by the value of `duration` in <<User Preferences, User Preferences>>. See <<Dura
 ==== Edit an existing interviewer
 Manually edit an existing interviewer in the database.
 
-Format: `edit NAME r/interviewer [p/PHONE] [t/TAG]... [d/DEPARTMENT] [ew/NUS_WORK_EMAIL] [s/SLOT...]`
+Format: `edit NAME r/interviewer [n/NAME] [p/PHONE] [t/TAG]... [d/DEPARTMENT] [ew/NUS_WORK_EMAIL] [s/SLOT]...`
 
 Notes:
 
-* An empty tag prefix `t/` can be supplied to reset the tags of an interviewee.
+* An empty tag prefix `t/` can be supplied to reset the tags of an interviewer.
 * If a slot prefix `s/` is supplied, at least one valid, non-empty slot must be provided.
+* If a name prefix `n/` is supplied, the `NAME` given should not match (case-insensitive) that of other interviewers.
+** `John Doit` and `John Do it` are considered different names.
 
 Example:
 
- edit John Doe r/interviewee p/91234567 f/School of Computing s/05/11/2019 18:00-19:00
+ edit John Doe r/interviewer p/91234567 s/05/11/2019 18:30-19:00
 
 // end::edit_interviewer[]
 
@@ -540,17 +558,18 @@ Constraints:
 * A `ew/NUS_WORK_EMAIL` must be of format local-part@domain.
 ** The local-part must only contain alphanumeric characters and special characters ( !#$%&'*+/=?`{|}~^.- ), excluding the parenthesis.
 ** The domain name must at least be 2 characters long, start and end with alphanumeric characters and consist of alphanumeric characters, with a period or a hyphen for the characters in-between, if any.
-* A `d/DEPARTMENT` can take any value in english, but should not be blank.
+* A `d/DEPARTMENT` should be in English, and should not be blank.
 * A `t/TAG` must only be alphanumeric and one word, i.e `t/catLover` is correct while `t/cat lover` is not.
 * `s/SLOT` must follow the format: `dd/MM/yyyy HH:mm-HH:mm`, where *dd/MM/yyyy* refers to a *date*, the leftmost *HH:mm* refers to the *start duration*
 and the rightmost *HH:mm* refers to the *end duration*.
 * The date *dd/MM/yyyy* must strictly be a valid date, i.e 30/02/2019  cannot be supplied as a date.
-* The duration of a `s/SLOT` must follow these constraints:
-** A duration must be in 24-hour format.
-** The range of durations available for input must be within <<Working Hours, Working Hours>>.
-** The start duration must be earlier than the end duration, and be in increments of `duration`.
-The time elapsed from the start duration to end duration must also follow the number of minutes as specified
-by the value of `duration` in <<User Preferences, User Preferences>>. See <<Duration of Time slot, Duration of Time slot>> for more details.
+* The *start duration* and *end duration* of a `s/SLOT` must follow these constraints:
+** A *start duration* and *end duration* must be in 24-hour format.
+** The range of *start durations* and *end durations* available for input must be within <<Working Hours, Working Hours>>.
+** The *start duration* must be earlier than the *end duration*, and be in increments of `duration`.
+The time elapsed from the *start duration* to *end duration* must also follow the number of minutes as specified
+by the value of `duration` in <<User Preferences, User Preferences>>. Otherwise, scheduled data will not be displayed
+properly in the user interface. See <<Duration of Timeslot, Duration of Timeslot>> for more details.
 
 ====
 
@@ -573,30 +592,22 @@ Example:
 
  delete John Doe r/interviewee
 
-====
+Notes:
 
-Constraints:
-
-* The interviewee with `NAME` must exist in the Scheduler.
-
-====
+* An interviewee with the same name as the given `NAME` argument (case-insensitive) should exist in Scheduler.
 
 ==== Delete an existing interviewer
 Deletes the specified interviewer from the database.
 
-Format: `delete NAME r/interviewee`
+Format: `delete NAME r/interviewer`
 
 Example:
 
  delete Bohn Doe r/interviewer
 
-====
+Notes:
 
-Constraints:
-
-* The interviewer with `NAME` must exist in the Scheduler.
-
-====
+* An interviewer with the same name as the given `NAME` argument (case-insensitive) should exist in Scheduler.
 
 // end::delete[]
 
@@ -819,18 +830,18 @@ Format: `record rank`
 |`clear` +
 
 |Add interviewee
-|`add r/interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL
+|`add interviewee n/NAME p/PHONE f/FACULTY y/YEAR_OF_STUDY ep/PERSONAL_EMAIL ew/NUS_WORK_EMAIL
 d/DEPARTMENT... s/SLOT... [t/TAG]...` +
 
 |Add interviewer
-|`add r/interviewer n/NAME p/PHONE ew/NUS_WORK_EMAIL d/DEPARTMENT  s/SLOT... [t/TAG]...` +
+|`add interviewer n/NAME p/PHONE ew/NUS_WORK_EMAIL d/DEPARTMENT s/SLOT... [t/TAG]...` +
 
 |Edit interviewee
-|`edit NAME r/interviewee [p/PHONE] [f/FACULTY] [y/YEAR_OF_STUDY] [ep/PERSONAL_EMAIL] [ew/NUS_WORK_EMAIL]
+|`edit NAME r/interviewee [n/NAME] [p/PHONE] [f/FACULTY] [y/YEAR_OF_STUDY] [ep/PERSONAL_EMAIL] [ew/NUS_WORK_EMAIL]
 [d/DEPARTMENT]... [s/SLOT]... [t/TAG]...` +
 
 |Edit interviewer
-|`edit NAME r/interviewer [p/PHONE] [t/TAG]... [d/DEPARTMENT] [ew/NUS_WORK_EMAIL] [s/SLOT...]` +
+|`edit NAME r/interviewer [n/NAME] [p/PHONE] [t/TAG]... [d/DEPARTMENT] [ew/NUS_WORK_EMAIL] [s/SLOT...]` +
 
 |Delete interviewee
 |`delete NAME r/interviewee` +
